downloading script changed

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -13,7 +13,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -56,7 +55,7 @@
     "if not gpu_available:\n",
     "    print(\"Consider following the guide https://www.tensorflow.org/install/gpu for model training\")\n",
     "\n",
-    "IMAGES = 7400\n",
+    "IMAGES = 7100\n",
     "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
     "\n",
     "BATCH_SIZE = 32\n",
@@ -67,12 +66,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": []
+   "metadata": {},
+   "source": [
+    "#### Run following cell to set up in Google Colab environment:"
+   ]
   },
   {
    "cell_type": "code",
@@ -186,57 +183,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 1000,
-     "referenced_widgets": [
-      "931948467e3340a8836c2d58de123dd7",
-      "06e6ba1fef1e4e14879779f80dddf867",
-      "1db4c1d919704990af351d3bd87dd44a",
-      "f598d4a182dc40c0a8131807226bfa26",
-      "757e6a3d4f8444a78aaced9fe07ae698",
-      "da0fddfdee95440895f16b77a270c113",
-      "5de3129d17db47fb81941e66bc5f1eaf",
-      "7c39c07c6ae04da59549213cb9d07a56",
-      "6ebe9fb81ae946ef9f5dc7c3284541b5",
-      "89fb516d640a484bae75acba0a8c182d",
-      "9783ba48dcda4072b872c0f148e3e0e0",
-      "a18045c06a1449759ab994bf7e0c4345",
-      "0699a43220e64f4db3aad06bae2f7a25",
-      "67c97746213244f89ea7228f224a2f54",
-      "c67e7856bb304c94951d3e90c4a5cb0f",
-      "5423ecbb28894bd4adddc0138e18209c",
-      "34d79de41d6c42adbd7d0a35e674b041",
-      "9b7014d6a9364a4b929d172fbdea6b08",
-      "9d9ea3df08914623ad7b6511193566cc",
-      "5035f54bc0704b20b70ad66fac826758",
-      "6879a8ccbd7d417798415542eea6ac53",
-      "fa84a18538e04ba08d5e8e8e0c4ed08b",
-      "c692cff310ab4171b67416bacb16979b",
-      "6f0f362b873c4580978e82d10338db7a",
-      "09dfcabb216e4a6396c84f30c5b45e1b",
-      "90d248ef2ebf49448af505d61da085af",
-      "9bff6923ab1f40d9ae96f0f2e2d111c7",
-      "dd38358974884d15a8f7db4375808f43",
-      "132d410fb5474090845fada1d60c07d0",
-      "7d5f8071d6d240a9a90d4ff185ae76db",
-      "e3e5278fbda44e5ab1ba4ebb818ffb56",
-      "6e7f0b7d198a4ae78eeae79758a364d7",
-      "0a7a4ad9717a4900b7896b2d919ca6f9"
-     ]
-    },
-    "id": "jIskVGQaSDlD",
-    "outputId": "0b3449e5-50a8-4984-8b41-f6b20bd0b0fa",
     "pycharm": {
-     "is_executing": true
+     "is_executing": true,
+     "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
+    "from pandas import read_csv, concat\n",
     "from imagehash import average_hash\n",
     "from os import makedirs, system\n",
     "from tqdm.notebook import tqdm\n",
-    "from pandas import read_csv\n",
     "from shutil import rmtree\n",
     "from requests import get\n",
     "from io import BytesIO\n",
@@ -248,18 +205,18 @@
     "    return path\n",
     "\n",
     "def download_and_save(img_source: str, img_type: str, count: int, source: [str]):\n",
-    "    print(f\"Downloading {img_type} images from {img_source}\")\n",
+    "    print(f\"Downloading {img_type} images from {img_source}, {len(source)} images provided\")\n",
     "    img_hashes = set()\n",
     "    img_code = 0\n",
     "\n",
     "    with tqdm(total=count, desc=\"Downloading\", unit=\"img\") as bar:\n",
     "        while len(img_hashes) < count:\n",
     "            if img_code >= len(source):\n",
-    "                raise RuntimeError(f\"The source set contains only {len(source)} elements, {img_code}th was requested!\")\n",
+    "                raise RuntimeError(f\"The source set contains only {len(source)} elements, {img_code}th was requested! ({img_code + 1 - count} collisions)\")\n",
     "            else:\n",
     "                try:\n",
     "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
-    "                    img_hash = average_hash(img_data)\n",
+    "                    img_hash = average_hash(img_data, hash_size=IMG_SIZE[0])\n",
     "                    if img_hash not in img_hashes:\n",
     "                        img_hashes.add(img_hash)\n",
     "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
@@ -281,15 +238,17 @@
     "clear_path(f\"{IMAGE_DIR}/other\")\n",
     "\n",
     "frame = read_csv(\"./datasets/hogweed.csv\")\n",
-    "frame = frame[frame[\"license\"] != \"CC0\"][\"image_url\"]\n",
+    "open_frame = frame[frame[\"license\"] == \"CC0\"][\"image_url\"]\n",
+    "frame = concat([frame[frame[\"license\"] != \"CC0\"][\"image_url\"], open_frame.head(len(open_frame) - 50)])\n",
     "download_and_save(\"iNaturalist\", \"hogweed\", IMAGES, naturalize_urls(frame.to_list()))\n",
     "\n",
     "frame = read_csv(\"./datasets/cetera.csv\")\n",
-    "frame = frame[(frame[\"license\"] != \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"]\n",
+    "open_frame = frame[(frame[\"license\"] == \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"]\n",
+    "frame = concat([frame[(frame[\"license\"] != \"CC0\") & (frame[\"scientific_name\"] != \"Heracleum sosnowskyi\")][\"image_url\"], open_frame.head(len(open_frame) - 50)])\n",
     "download_and_save(\"iNaturalist\", \"cetera\", IMAGES, naturalize_urls(frame.to_list()))\n",
     "\n",
     "frame = read_csv(\"./datasets/other.csv\")\n",
-    "download_and_save(\"UnSplash\", \"other\", IMAGES, frame[\"OriginalURL\"])\n",
+    "download_and_save(\"OpenImages\", \"other\", IMAGES, frame[\"OriginalURL\"])\n",
     "\n",
     "print(\"Removing ipynb caches\")\n",
     "system(\"rm -rf `find -type d -name .ipynb_checkpoints`\")"
@@ -300,7 +259,7 @@
    "metadata": {},
    "source": [
     "### Use this cell to regenerate `./datasets/validation.csv` file\n",
-    "It will contain 50 open source from each plant dataset (cetera, hogweed) + 50 open source images from [unsplash](https://unsplash.com/).\n",
+    "It will contain 50 last open source from each plant dataset (cetera, hogweed) that were not in train nor in test datasets + 50 open source images from [unsplash](https://unsplash.com/).\n",
     "It is not guaranteed that unsplash images will be unique, but it's the only clearly open source image source was found.\n",
     "\n",
     "The generated file may be used with result testing script (`./test.py`) as follows: `python test.py -n ./models/[YOUR MODEL FILE NAME].tflite -s ./datasets/validation.csv`."
@@ -311,6 +270,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -320,9 +280,9 @@
     "\n",
     "\n",
     "frame = read_csv(\"./datasets/hogweed.csv\")\n",
-    "hogweed_frame = frame[frame[\"license\"] == \"CC0\"].sample(50)[\"image_url\"]\n",
+    "hogweed_frame = frame[frame[\"license\"] == \"CC0\"].tail(50)[\"image_url\"]\n",
     "frame = read_csv(\"./datasets/cetera.csv\")\n",
-    "cetera_frame = frame[(frame[\"scientific_name\"] != \"Heracleum sosnowskyi\") & (frame[\"license\"] == \"CC0\")].sample(50)[\"image_url\"]\n",
+    "cetera_frame = frame[(frame[\"scientific_name\"] != \"Heracleum sosnowskyi\") & (frame[\"license\"] == \"CC0\")].tail(50)[\"image_url\"]\n",
     "\n",
     "URLs = naturalize_urls(hogweed_frame.to_list()) + naturalize_urls(cetera_frame.to_list()) + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
     "classes = (['hogweed'] * 50) + (['cetera'] * 50) + (['other'] * 50)\n",
@@ -431,7 +391,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
