learning bug fixed

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -59,7 +59,8 @@
     "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
     "\n",
     "BATCH_SIZE = 32\n",
-    "IMG_SIZE = (299, 299)\n",
+    "IMG_SIZE = (224, 224)\n",
+    "CLASS_NAMES = ['hogweed', 'cetera', 'other']\n",
     "\n",
     "INITIAL_EPOCHS = 16"
    ]
@@ -184,7 +185,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -216,10 +216,10 @@
     "            else:\n",
     "                try:\n",
     "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
-    "                    img_hash = average_hash(img_data, hash_size=IMG_SIZE[0])\n",
+    "                    img_hash = average_hash(img_data, hash_size=32)\n",
     "                    if img_hash not in img_hashes:\n",
-    "                        img_hashes.add(img_hash)\n",
     "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
+    "                        img_hashes.add(img_hash)\n",
     "                        bar.update()\n",
     "                finally:\n",
     "                    img_code += 1\n",
@@ -315,7 +315,7 @@
     "from tensorflow import expand_dims\n",
     "\n",
     "\n",
-    "dataset = image_dataset_from_directory(IMAGE_DIR, shuffle=True, label_mode='categorical', batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
+    "dataset = image_dataset_from_directory(IMAGE_DIR, class_names=CLASS_NAMES, label_mode='categorical', batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
     "batches_num = cardinality(dataset)\n",
     "\n",
     "train_power = batches_num * 9 // 10\n",
@@ -353,30 +353,29 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
-    "from tensorflow.keras.layers import GlobalAveragePooling2D, Dense, Dropout\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
+    "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras import Input, Model\n",
     "\n",
     "\n",
     "INPUT_SHAPE = IMG_SIZE + (3,)\n",
     "\n",
-    "base_model = Xception(input_shape=INPUT_SHAPE, include_top=False)\n",
+    "base_model = Xception(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
     "base_model.trainable = False\n",
     "\n",
     "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
     "x = data_augmentation(inputs)\n",
     "x = preprocess_input(x)\n",
     "x = base_model(x, training=False)\n",
-    "x = GlobalAveragePooling2D(name=\"pooling\")(x)\n",
     "x = Dropout(0.2, name=\"dropout\")(x)\n",
     "outputs = Dense(3, name=\"predictor\")(x)\n",
     "model = Model(inputs, outputs, name=\"hogweed_detector\")\n",
     "\n",
     "# TODO: check learning rate!\n",
     "# TODO: check optimizer!\n",
-    "base_learning_rate = 0.001\n",
-    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(), metrics=['accuracy'])\n",
+    "base_learning_rate = 0.0005\n",
+    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
@@ -405,48 +404,44 @@
     "\n",
     "class CustomCallback(Callback):\n",
     "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.batch_train_accuracy = []\n",
-    "        self.batch_train_losses = []\n",
-    "\n",
-    "        self.epoch_train_accuracy = []\n",
-    "        self.epoch_train_losses = []\n",
-    "        self.epoch_test_accuracy = []\n",
-    "        self.epoch_test_losses = []\n",
-    "\n",
-    "        self.batch_figure, self.batch_train_graph = subplots(1, 1, figsize=(15, 5))\n",
-    "        self.batch_figure.suptitle(\"Accuracy/Loss graph\")\n",
-    "        self.batch_train_graph.set_title(\"Training\")\n",
-    "        self.batch_train_graph.set_xlabel(\"Batches\")\n",
-    "        self.batch_train_graph.set_ylabel(\"Accuracy/Losses\")\n",
-    "        self.batch_train_graph.grid(visible=True)\n",
-    "        self.batch_display_id = \"batch_graph\"\n",
-    "        close(self.batch_figure)\n",
-    "\n",
-    "        self.epoch_figure, (self.epoch_train_graph, self.epoch_test_graph) = subplots(1, 2, figsize=(15, 5))\n",
-    "        self.epoch_figure.suptitle(\"Accuracy/Loss graph\")\n",
-    "        self.epoch_train_graph.set_title(\"Training\")\n",
-    "        self.epoch_test_graph.set_title(\"Testing\")\n",
-    "        for graph in (self.epoch_train_graph, self.epoch_test_graph):\n",
-    "            graph.set_xlabel(\"Epochs\")\n",
-    "            graph.set_ylabel(\"Accuracy/Losses\")\n",
+    "        def configure_graph(graph, measure: str, activity: str, param: str):\n",
+    "            graph.set_title(f\"{measure} {activity} {param}\")\n",
+    "            graph.set_xlabel(measure)\n",
+    "            graph.set_ylabel(param)\n",
     "            graph.grid(visible=True)\n",
-    "        self.epoch_display_id = \"epoch_graph\"\n",
-    "        close(self.epoch_figure)\n",
+    "\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.batch_train_accuracy = []\n",
+    "        self.batch_train_loss = []\n",
+    "        self.epoch_train_accuracy = []\n",
+    "        self.epoch_train_loss = []\n",
+    "        self.epoch_test_accuracy = []\n",
+    "        self.epoch_test_loss = []\n",
+    "\n",
+    "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_test_graph) = subplots(3, 1, figsize=(15, 15))\n",
+    "\n",
+    "        self.figure.suptitle(\"Accuracy/Loss graphs\")\n",
+    "        configure_graph(self.batch_train_graph, \"Batch\", \"training\", \"Accuracy and Loss\")\n",
+    "        configure_graph(self.epoch_train_graph, \"Epoch\", \"training\", \"Accuracy and Loss\")\n",
+    "        configure_graph(self.epoch_test_graph, \"Epoch\", \"testing\", \"Accuracy and Loss\")\n",
+    "\n",
+    "        self.figure_display_id = \"figure\"\n",
+    "        close(self.figure)\n",
     "\n",
     "        self.epochs_bar = None\n",
     "        self.batches_bar = None\n",
     "\n",
-    "    def redraw_graph(self, figure, graph, display_id, losses_arr, accuracy_arr):\n",
+    "    def redraw_graph(self, graph, accuracy_arr, loss_arr):\n",
     "        title = graph.get_title()\n",
     "        x_label = graph.get_xlabel()\n",
     "        y_label = graph.get_ylabel()\n",
     "\n",
     "        graph.cla()\n",
-    "        graph.plot(losses_arr, color='blue', label=\"losses\")\n",
-    "        graph.scatter(len(losses_arr) - 1, losses_arr[-1], c='blue')\n",
     "        graph.plot(accuracy_arr, color='red', label=\"accuracy\")\n",
     "        graph.scatter(len(accuracy_arr) - 1, accuracy_arr[-1], c='red')\n",
+    "        graph.plot(loss_arr, color='blue', label=\"loss\")\n",
+    "        graph.scatter(len(loss_arr) - 1, loss_arr[-1], c='blue')\n",
     "\n",
     "        graph.set_ylim(bottom=0)\n",
     "        graph.set_title(title)\n",
@@ -455,12 +450,11 @@
     "        graph.legend()\n",
     "        graph.grid(visible=True)\n",
     "\n",
-    "        figure.canvas.draw()\n",
-    "        update_display(figure, display_id=display_id)\n",
+    "        self.figure.canvas.draw()\n",
+    "        update_display(self.figure, display_id=self.figure_display_id)\n",
     "\n",
     "    def on_train_begin(self, logs=None):\n",
-    "        display(self.batch_figure, display_id=self.batch_display_id)\n",
-    "        display(self.epoch_figure, display_id=self.epoch_display_id)\n",
+    "        display(self.figure, display_id=self.figure_display_id)\n",
     "\n",
     "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
     "\n",
@@ -468,22 +462,22 @@
     "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        self.epoch_train_losses.append(logs['loss'])\n",
     "        self.epoch_train_accuracy.append(logs['accuracy'])\n",
-    "        self.redraw_graph(self.epoch_figure, self.epoch_train_graph, self.epoch_display_id, self.epoch_train_losses, self.epoch_train_accuracy)\n",
+    "        self.epoch_train_loss.append(logs['loss'])\n",
+    "        self.redraw_graph(self.epoch_train_graph, self.epoch_train_accuracy, self.epoch_train_loss)\n",
     "\n",
-    "        self.epoch_test_losses.append(logs['val_loss'])\n",
     "        self.epoch_test_accuracy.append(logs['val_accuracy'])\n",
-    "        self.redraw_graph(self.epoch_figure, self.epoch_test_graph, self.epoch_display_id, self.epoch_test_losses, self.epoch_test_accuracy)\n",
+    "        self.epoch_test_loss.append(logs['val_loss'])\n",
+    "        self.redraw_graph(self.epoch_test_graph, self.epoch_test_accuracy, self.epoch_test_loss)\n",
     "\n",
     "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
     "        self.batches_bar.close()\n",
     "        self.epochs_bar.update()\n",
     "\n",
     "    def on_train_batch_end(self, batch, logs=None):\n",
-    "        self.batch_train_losses.append(logs['loss'])\n",
     "        self.batch_train_accuracy.append(logs['accuracy'])\n",
-    "        self.redraw_graph(self.batch_figure, self.batch_train_graph, self.batch_display_id, self.batch_train_losses, self.batch_train_accuracy)\n",
+    "        self.batch_train_loss.append(logs['loss'])\n",
+    "        self.redraw_graph(self.batch_train_graph,self.batch_train_accuracy, self.batch_train_loss)\n",
     "\n",
     "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
     "        self.batches_bar.update()\n",
@@ -533,7 +527,7 @@
     "from tensorflow.lite.python.lite import TFLiteConverter\n",
     "\n",
     "\n",
-    "with open(f\"{MODEL_DIR}/detector-{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
+    "with open(f\"{MODEL_DIR}/{type(base_model).__name__}-{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
     "    lite_model = tf.lite.TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
