--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -217,7 +217,7 @@
     "                try:\n",
     "                    img_data = Image.open(BytesIO(get(source[img_code]).content))\n",
     "                    img_hash = average_hash(img_data, hash_size=32)\n",
-    "                    if img_hash not in img_hashes:\n",
+    "                    if img_hash not in img_hashes and len(img_data.getdata()) > 0:\n",
     "                        img_data.save(f\"{IMAGE_DIR}/{img_type}/{img_type}{img_code}.jpg\")\n",
     "                        img_hashes.add(img_hash)\n",
     "                        bar.update()\n",
