sample tests done

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -36,6 +36,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -77,6 +78,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -185,6 +187,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -197,6 +200,7 @@
     "from shutil import rmtree\n",
     "from requests import get\n",
     "from io import BytesIO\n",
+    "from PIL import Image\n",
     "\n",
     "\n",
     "def clear_path(path: str) -> str:\n",
@@ -303,7 +307,10 @@
      "height": 649
     },
     "id": "0_H_k8Xkv1Lv",
-    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85"
+    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -324,8 +331,7 @@
     "\n",
     "data_augmentation = Sequential([\n",
     "    RandomFlip('horizontal'),\n",
-    "    RandomRotation(0.1),\n",
-    "    # RandomContrast(0.01)\n",
+    "    RandomRotation(0.1)\n",
     "])\n",
     "\n",
     "print(f\"Train set has {cardinality(train_dataset)} batches, test set has {cardinality(test_dataset)} batches; train set will be augmented:\")\n",
@@ -347,12 +353,13 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
-    "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
+    "from tensorflow.keras.applications.resnet_v2 import preprocess_input, ResNet152V2 as Pretrained\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -361,7 +368,7 @@
     "\n",
     "INPUT_SHAPE = IMG_SIZE + (3,)\n",
     "\n",
-    "base_model = Xception(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
+    "base_model = Pretrained(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
     "base_model.trainable = False\n",
     "\n",
     "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
@@ -390,6 +397,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -402,7 +410,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "\n",
-    "class CustomCallback(Callback):\n",
+    "class LoggingCallback(Callback):\n",
     "    def __init__(self):\n",
     "        def configure_graph(graph, measure: str, activity: str, param: str):\n",
     "            graph.set_title(f\"{measure} {activity} {param}\")\n",
@@ -486,8 +494,7 @@
     "        self.epochs_bar.close()\n",
     "\n",
     "\n",
-    "\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[CustomCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[LoggingCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
    ]
   },
   {
@@ -525,10 +532,12 @@
    "outputs": [],
    "source": [
     "from tensorflow.lite.python.lite import TFLiteConverter\n",
+    "from os import makedirs\n",
     "\n",
     "\n",
-    "with open(f\"{MODEL_DIR}/{type(base_model).__name__}-{history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
-    "    lite_model = tf.lite.TFLiteConverter.from_keras_model(model).convert()\n",
+    "makedirs(MODEL_DIR, exist_ok=True)\n",
+    "with open(f\"{MODEL_DIR}/{Pretrained.__name__}-{history.history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
+    "    lite_model = TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
   }
