--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -205,7 +205,7 @@
     "\n",
     "def clear_path(path: str) -> str:\n",
     "    rmtree(path, ignore_errors=True)\n",
-    "    makedirs(path)\n",
+    "    makedirs(path, exist_ok=True)\n",
     "    return path\n",
     "\n",
     "def download_and_save(img_source: str, img_type: str, count: int, source: [str]):\n",
@@ -319,7 +319,6 @@
     "from tensorflow.python.data.experimental import cardinality\n",
     "from tensorflow.python.data import AUTOTUNE\n",
     "from tensorflow.keras import Sequential\n",
-    "from tensorflow import expand_dims\n",
     "\n",
     "\n",
     "dataset = image_dataset_from_directory(IMAGE_DIR, class_names=CLASS_NAMES, label_mode='categorical', batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
@@ -334,13 +333,7 @@
     "    RandomRotation(0.1)\n",
     "])\n",
     "\n",
-    "print(f\"Train set has {cardinality(train_dataset)} batches, test set has {cardinality(test_dataset)} batches; train set will be augmented:\")\n",
-    "for i in range(0, 5):\n",
-    "    imgs = []\n",
-    "    for img, _ in train_dataset.skip(i).take(1):\n",
-    "        for j in range(0, 5):\n",
-    "            imgs += [data_augmentation(expand_dims(img[0], 0))[0] / 255]\n",
-    "    print_images_line(imgs)"
+    "print(f\"Train set has {cardinality(train_dataset)} batches, test set has {cardinality(test_dataset)} batches; train set will be augmented.\")"
    ]
   },
   {
@@ -362,7 +355,7 @@
     "from tensorflow.keras.applications.resnet_v2 import preprocess_input, ResNet152V2 as Pretrained\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.optimizers import Adadelta\n",
     "from tensorflow.keras import Input, Model\n",
     "\n",
     "\n",
@@ -379,10 +372,8 @@
     "outputs = Dense(3, name=\"predictor\")(x)\n",
     "model = Model(inputs, outputs, name=\"hogweed_detector\")\n",
     "\n",
-    "# TODO: check learning rate!\n",
-    "# TODO: check optimizer!\n",
     "base_learning_rate = 0.0001\n",
-    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
+    "model.compile(optimizer=Adadelta(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
