New optimizer applied

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -355,7 +355,7 @@
     "from tensorflow.keras.applications.resnet_v2 import preprocess_input, ResNet152V2 as Pretrained\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
-    "from tensorflow.keras.optimizers import Adadelta\n",
+    "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras import Input, Model\n",
     "\n",
     "\n",
@@ -373,7 +373,7 @@
     "model = Model(inputs, outputs, name=\"hogweed_detector\")\n",
     "\n",
     "base_learning_rate = 0.0001\n",
-    "model.compile(optimizer=Adadelta(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
+    "model.compile(optimizer=Adam(learning_rate=base_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
     "\n",
     "model.summary()"
    ]
