--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -36,7 +36,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -57,13 +56,12 @@
     "    print(\"Consider following the guide https://www.tensorflow.org/install/gpu for model training\")\n",
     "\n",
     "IMAGES = 7100\n",
-    "API_KEY = \"24844585-de839c0e13ca422a989916f16\"\n",
-    "\n",
-    "BATCH_SIZE = 32\n",
-    "IMG_SIZE = (224, 224)\n",
+    "IMG_SIZE = (299, 299)\n",
     "CLASS_NAMES = ['hogweed', 'cetera', 'other']\n",
     "\n",
-    "INITIAL_EPOCHS = 16"
+    "BATCH_SIZE = 32\n",
+    "INITIAL_EPOCHS = 32\n",
+    "FINE_TUNING_EPOCHS = 16"
    ]
   },
   {
@@ -130,12 +128,99 @@
    },
    "outputs": [],
    "source": [
+    "from tensorflow.python.data.experimental import cardinality\n",
+    "from tensorflow.python.keras.callbacks import Callback\n",
     "from matplotlib.pyplot import imread, subplots, close\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display, update_display\n",
     "from matplotlib.axes import Axes\n",
+    "from tqdm.notebook import tqdm\n",
     "from random import sample\n",
     "from os import listdir\n",
     "from PIL import Image\n",
+    "\n",
+    "\n",
+    "class LoggingCallback(Callback):\n",
+    "    def __init__(self):\n",
+    "        def configure_graph(graph, measure: str, activity: str, param: str):\n",
+    "            graph.set_title(f\"{measure} {activity} {param}\")\n",
+    "            graph.set_xlabel(measure)\n",
+    "            graph.set_ylabel(param)\n",
+    "            graph.grid(visible=True)\n",
+    "\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.batch_train_accuracy = []\n",
+    "        self.batch_train_loss = []\n",
+    "        self.epoch_train_accuracy = []\n",
+    "        self.epoch_train_loss = []\n",
+    "        self.epoch_test_accuracy = []\n",
+    "        self.epoch_test_loss = []\n",
+    "\n",
+    "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_test_graph) = subplots(3, 1, figsize=(15, 15))\n",
+    "\n",
+    "        self.figure.suptitle(\"Accuracy/Loss graphs\")\n",
+    "        configure_graph(self.batch_train_graph, \"Batch\", \"training\", \"Accuracy and Loss\")\n",
+    "        configure_graph(self.epoch_train_graph, \"Epoch\", \"training\", \"Accuracy and Loss\")\n",
+    "        configure_graph(self.epoch_test_graph, \"Epoch\", \"testing\", \"Accuracy and Loss\")\n",
+    "\n",
+    "        self.figure_display_id = \"figure\"\n",
+    "        close(self.figure)\n",
+    "\n",
+    "        self.epochs_bar = None\n",
+    "        self.batches_bar = None\n",
+    "\n",
+    "    def redraw_graph(self, graph, accuracy_arr, loss_arr):\n",
+    "        title = graph.get_title()\n",
+    "        x_label = graph.get_xlabel()\n",
+    "        y_label = graph.get_ylabel()\n",
+    "\n",
+    "        graph.cla()\n",
+    "        graph.plot(accuracy_arr, color='red', label=\"accuracy\")\n",
+    "        graph.scatter(len(accuracy_arr) - 1, accuracy_arr[-1], c='red')\n",
+    "        graph.plot(loss_arr, color='blue', label=\"loss\")\n",
+    "        graph.scatter(len(loss_arr) - 1, loss_arr[-1], c='blue')\n",
+    "\n",
+    "        graph.set_ylim(bottom=0)\n",
+    "        graph.set_title(title)\n",
+    "        graph.set_xlabel(x_label)\n",
+    "        graph.set_ylabel(y_label)\n",
+    "        graph.legend()\n",
+    "        graph.grid(visible=True)\n",
+    "\n",
+    "        self.figure.canvas.draw()\n",
+    "        update_display(self.figure, display_id=self.figure_display_id)\n",
+    "\n",
+    "    def on_train_begin(self, logs=None):\n",
+    "        display(self.figure, display_id=self.figure_display_id)\n",
+    "\n",
+    "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
+    "\n",
+    "    def on_epoch_begin(self, epoch, logs=None):\n",
+    "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
+    "\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        self.epoch_train_accuracy.append(logs['accuracy'])\n",
+    "        self.epoch_train_loss.append(logs['loss'])\n",
+    "        self.redraw_graph(self.epoch_train_graph, self.epoch_train_accuracy, self.epoch_train_loss)\n",
+    "\n",
+    "        self.epoch_test_accuracy.append(logs['val_accuracy'])\n",
+    "        self.epoch_test_loss.append(logs['val_loss'])\n",
+    "        self.redraw_graph(self.epoch_test_graph, self.epoch_test_accuracy, self.epoch_test_loss)\n",
+    "\n",
+    "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
+    "        self.batches_bar.close()\n",
+    "        self.epochs_bar.update()\n",
+    "\n",
+    "    def on_train_batch_end(self, batch, logs=None):\n",
+    "        self.batch_train_accuracy.append(logs['accuracy'])\n",
+    "        self.batch_train_loss.append(logs['loss'])\n",
+    "        self.redraw_graph(self.batch_train_graph,self.batch_train_accuracy, self.batch_train_loss)\n",
+    "\n",
+    "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
+    "        self.batches_bar.update()\n",
+    "\n",
+    "    def on_train_end(self, logs=None):\n",
+    "        self.epochs_bar.close()\n",
     "\n",
     "\n",
     "def remove_axis(plt: Axes):\n",
@@ -307,10 +392,7 @@
      "height": 649
     },
     "id": "0_H_k8Xkv1Lv",
-    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85",
-    "pycharm": {
-     "is_executing": true
-    }
+    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85"
    },
    "outputs": [],
    "source": [
@@ -346,13 +428,12 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
    "outputs": [],
    "source": [
-    "from tensorflow.keras.applications.resnet_v2 import preprocess_input, ResNet152V2 as Pretrained\n",
+    "from tensorflow.keras.applications.xception import preprocess_input, Xception\n",
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
@@ -361,7 +442,7 @@
     "\n",
     "INPUT_SHAPE = IMG_SIZE + (3,)\n",
     "\n",
-    "base_model = Pretrained(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
+    "base_model = Xception(input_shape=INPUT_SHAPE, pooling='avg', include_top=False)\n",
     "base_model.trainable = False\n",
     "\n",
     "inputs = Input(shape=INPUT_SHAPE, name=\"re_shaper\")\n",
@@ -394,98 +475,54 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.python.keras.callbacks import Callback, EarlyStopping\n",
-    "from tensorflow.python.data.experimental import cardinality\n",
-    "from IPython.display import display, update_display\n",
-    "from matplotlib.pyplot import subplots, close\n",
-    "from tqdm.notebook import tqdm\n",
-    "\n",
-    "\n",
-    "class LoggingCallback(Callback):\n",
-    "    def __init__(self):\n",
-    "        def configure_graph(graph, measure: str, activity: str, param: str):\n",
-    "            graph.set_title(f\"{measure} {activity} {param}\")\n",
-    "            graph.set_xlabel(measure)\n",
-    "            graph.set_ylabel(param)\n",
-    "            graph.grid(visible=True)\n",
-    "\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.batch_train_accuracy = []\n",
-    "        self.batch_train_loss = []\n",
-    "        self.epoch_train_accuracy = []\n",
-    "        self.epoch_train_loss = []\n",
-    "        self.epoch_test_accuracy = []\n",
-    "        self.epoch_test_loss = []\n",
-    "\n",
-    "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_test_graph) = subplots(3, 1, figsize=(15, 15))\n",
-    "\n",
-    "        self.figure.suptitle(\"Accuracy/Loss graphs\")\n",
-    "        configure_graph(self.batch_train_graph, \"Batch\", \"training\", \"Accuracy and Loss\")\n",
-    "        configure_graph(self.epoch_train_graph, \"Epoch\", \"training\", \"Accuracy and Loss\")\n",
-    "        configure_graph(self.epoch_test_graph, \"Epoch\", \"testing\", \"Accuracy and Loss\")\n",
-    "\n",
-    "        self.figure_display_id = \"figure\"\n",
-    "        close(self.figure)\n",
-    "\n",
-    "        self.epochs_bar = None\n",
-    "        self.batches_bar = None\n",
-    "\n",
-    "    def redraw_graph(self, graph, accuracy_arr, loss_arr):\n",
-    "        title = graph.get_title()\n",
-    "        x_label = graph.get_xlabel()\n",
-    "        y_label = graph.get_ylabel()\n",
-    "\n",
-    "        graph.cla()\n",
-    "        graph.plot(accuracy_arr, color='red', label=\"accuracy\")\n",
-    "        graph.scatter(len(accuracy_arr) - 1, accuracy_arr[-1], c='red')\n",
-    "        graph.plot(loss_arr, color='blue', label=\"loss\")\n",
-    "        graph.scatter(len(loss_arr) - 1, loss_arr[-1], c='blue')\n",
-    "\n",
-    "        graph.set_ylim(bottom=0)\n",
-    "        graph.set_title(title)\n",
-    "        graph.set_xlabel(x_label)\n",
-    "        graph.set_ylabel(y_label)\n",
-    "        graph.legend()\n",
-    "        graph.grid(visible=True)\n",
-    "\n",
-    "        self.figure.canvas.draw()\n",
-    "        update_display(self.figure, display_id=self.figure_display_id)\n",
-    "\n",
-    "    def on_train_begin(self, logs=None):\n",
-    "        display(self.figure, display_id=self.figure_display_id)\n",
-    "\n",
-    "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
-    "\n",
-    "    def on_epoch_begin(self, epoch, logs=None):\n",
-    "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
-    "\n",
-    "    def on_epoch_end(self, epoch, logs=None):\n",
-    "        self.epoch_train_accuracy.append(logs['accuracy'])\n",
-    "        self.epoch_train_loss.append(logs['loss'])\n",
-    "        self.redraw_graph(self.epoch_train_graph, self.epoch_train_accuracy, self.epoch_train_loss)\n",
-    "\n",
-    "        self.epoch_test_accuracy.append(logs['val_accuracy'])\n",
-    "        self.epoch_test_loss.append(logs['val_loss'])\n",
-    "        self.redraw_graph(self.epoch_test_graph, self.epoch_test_accuracy, self.epoch_test_loss)\n",
-    "\n",
-    "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
-    "        self.batches_bar.close()\n",
-    "        self.epochs_bar.update()\n",
-    "\n",
-    "    def on_train_batch_end(self, batch, logs=None):\n",
-    "        self.batch_train_accuracy.append(logs['accuracy'])\n",
-    "        self.batch_train_loss.append(logs['loss'])\n",
-    "        self.redraw_graph(self.batch_train_graph,self.batch_train_accuracy, self.batch_train_loss)\n",
-    "\n",
-    "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
-    "        self.batches_bar.update()\n",
-    "\n",
-    "    def on_train_end(self, logs=None):\n",
-    "        self.epochs_bar.close()\n",
+    "from tensorflow.python.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
     "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[LoggingCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.losses import CategoricalCrossentropy\n",
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "\n",
+    "\n",
+    "# Fine-tune from this layer onwards\n",
+    "fine_tune_from = len(base_model.layers) // 5 * 4\n",
+    "\n",
+    "# Freeze all the layers before the `fine_tune_at` layer\n",
+    "for layer in base_model.layers[fine_tune_from:]:\n",
+    "    if not type(layer).__name__ == 'BatchNormalization':\n",
+    "        layer.trainable = True\n",
+    "\n",
+    "further_learning_rate = 0.00001\n",
+    "model.compile(optimizer=RMSprop(learning_rate=further_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
+    "\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.keras.callbacks import EarlyStopping\n",
+    "\n",
+    "\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=history.epoch[-1], verbose=0, callbacks=[LoggingCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
    ]
   },
   {
@@ -527,7 +564,7 @@
     "\n",
     "\n",
     "makedirs(MODEL_DIR, exist_ok=True)\n",
-    "with open(f\"{MODEL_DIR}/{Pretrained.__name__}-{history.history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
+    "with open(f\"{MODEL_DIR}/detector-{history.history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
     "    lite_model = TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
