--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -60,8 +60,9 @@
     "CLASS_NAMES = ['hogweed', 'cetera', 'other']\n",
     "\n",
     "BATCH_SIZE = 32\n",
-    "INITIAL_EPOCHS = 32\n",
-    "FINE_TUNING_EPOCHS = 16"
+    "INITIAL_EPOCHS = 16\n",
+    "FINE_TUNING_EPOCHS = 16\n",
+    "EARLY_STOPPING = 0.0001"
    ]
   },
   {
@@ -374,7 +375,7 @@
     "cetera_frame = frame[(frame[\"scientific_name\"] != \"Heracleum sosnowskyi\") & (frame[\"license\"] == \"CC0\")].tail(50)[\"image_url\"]\n",
     "\n",
     "URLs = naturalize_urls(hogweed_frame.to_list()) + naturalize_urls(cetera_frame.to_list()) + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
-    "classes = (['hogweed'] * 50) + (['cetera'] * 50) + (['other'] * 50)\n",
+    "classes = sum([[cls] * 50 for cls in CLASS_NAMES], [])\n",
     "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/validation.csv\", index=False)"
    ]
   },
@@ -478,7 +479,12 @@
     "from tensorflow.python.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=[LoggingCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
+    "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=callbacks)\n",
+    "\n",
+    "epochs = len(history.history['val_accuracy'])\n",
+    "if epochs < EARLY_STOPPING:\n",
+    "    print(f\"Training stopped early with validation accuracy {round(history.history['val_accuracy'][-1], 3)} after {epochs} epochs.\")"
    ]
   },
   {
@@ -495,13 +501,11 @@
     "from tensorflow.keras.optimizers import RMSprop\n",
     "\n",
     "\n",
-    "# Fine-tune from this layer onwards\n",
-    "fine_tune_from = len(base_model.layers) // 5 * 4\n",
-    "\n",
-    "# Freeze all the layers before the `fine_tune_at` layer\n",
-    "for layer in base_model.layers[fine_tune_from:]:\n",
-    "    if not type(layer).__name__ == 'BatchNormalization':\n",
-    "        layer.trainable = True\n",
+    "fine_tune_from = len(base_model.layers) // 5\n",
+    "base_model.trainable = True\n",
+    "for index, layer in enumerate(base_model.layers):\n",
+    "    if index < fine_tune_from or type(layer).__name__ == 'BatchNormalization':\n",
+    "        layer.trainable = False\n",
     "\n",
     "further_learning_rate = 0.00001\n",
     "model.compile(optimizer=RMSprop(learning_rate=further_learning_rate), loss=CategoricalCrossentropy(from_logits=True), metrics=['accuracy'])\n",
@@ -522,7 +526,12 @@
     "from tensorflow.python.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=history.epoch[-1], verbose=0, callbacks=[LoggingCallback(), EarlyStopping(patience=3, restore_best_weights=True)])"
+    "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=history.epoch[-1], verbose=0, callbacks=callbacks)\n",
+    "\n",
+    "epochs = len(history.history['val_accuracy'])\n",
+    "if epochs < EARLY_STOPPING:\n",
+    "    print(f\"Training stopped early with validation accuracy {round(history.history['val_accuracy'][-1], 3)} after {epochs} epochs.\")"
    ]
   },
   {
