fine tuning done

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -36,6 +36,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -393,7 +394,10 @@
      "height": 649
     },
     "id": "0_H_k8Xkv1Lv",
-    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85"
+    "outputId": "bbe82398-4d27-4f46-df28-144230c35f85",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -429,6 +433,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -479,6 +484,7 @@
     "from tensorflow.python.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
+    "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
     "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
     "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=callbacks)\n",
     "\n",
@@ -492,6 +498,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -501,7 +508,7 @@
     "from tensorflow.keras.optimizers import RMSprop\n",
     "\n",
     "\n",
-    "fine_tune_from = len(base_model.layers) // 5\n",
+    "fine_tune_from = len(base_model.layers) // 5 * 4\n",
     "base_model.trainable = True\n",
     "for index, layer in enumerate(base_model.layers):\n",
     "    if index < fine_tune_from or type(layer).__name__ == 'BatchNormalization':\n",
@@ -518,6 +525,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -526,6 +534,7 @@
     "from tensorflow.python.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
+    "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
     "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
     "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=history.epoch[-1], verbose=0, callbacks=callbacks)\n",
     "\n",
