training done (95 percent)

--- a/ml-helper/initiator.ipynb
+++ b/ml-helper/initiator.ipynb
@@ -60,7 +60,7 @@
     "IMG_SIZE = (299, 299)\n",
     "CLASS_NAMES = ['hogweed', 'cetera', 'other']\n",
     "\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 8\n",
     "INITIAL_EPOCHS = 16\n",
     "FINE_TUNING_EPOCHS = 16\n",
     "EARLY_STOPPING = 0.0001"
@@ -130,10 +130,9 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.python.data.experimental import cardinality\n",
-    "from tensorflow.python.keras.callbacks import Callback\n",
     "from matplotlib.pyplot import imread, subplots, close\n",
     "from IPython.display import display, update_display\n",
+    "from tensorflow.keras.callbacks import Callback\n",
     "from matplotlib.axes import Axes\n",
     "from tqdm.notebook import tqdm\n",
     "from random import sample\n",
@@ -198,7 +197,7 @@
     "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
     "\n",
     "    def on_epoch_begin(self, epoch, logs=None):\n",
-    "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=cardinality(train_dataset).numpy())\n",
+    "        self.batches_bar = tqdm(desc=\"Training\", unit=\"batch\", total=train_dataset.cardinality().numpy())\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        self.epoch_train_accuracy.append(logs['accuracy'])\n",
@@ -403,13 +402,12 @@
    "source": [
     "from tensorflow.python.keras.layers import RandomFlip, RandomRotation\n",
     "from tensorflow.keras.utils import image_dataset_from_directory\n",
-    "from tensorflow.python.data.experimental import cardinality\n",
     "from tensorflow.python.data import AUTOTUNE\n",
     "from tensorflow.keras import Sequential\n",
     "\n",
     "\n",
     "dataset = image_dataset_from_directory(IMAGE_DIR, class_names=CLASS_NAMES, label_mode='categorical', batch_size=BATCH_SIZE, image_size=IMG_SIZE)\n",
-    "batches_num = cardinality(dataset)\n",
+    "batches_num = dataset.cardinality()\n",
     "\n",
     "train_power = batches_num * 9 // 10\n",
     "train_dataset = dataset.take(train_power).prefetch(buffer_size=AUTOTUNE)\n",
@@ -420,7 +418,7 @@
     "    RandomRotation(0.1)\n",
     "])\n",
     "\n",
-    "print(f\"Train set has {cardinality(train_dataset)} batches, test set has {cardinality(test_dataset)} batches; train set will be augmented.\")"
+    "print(f\"Train set has {train_dataset.cardinality()} batches, test set has {test_dataset.cardinality()} batches; train set will be augmented.\")"
    ]
   },
   {
@@ -481,7 +479,7 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.python.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
     "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
@@ -489,7 +487,7 @@
     "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=callbacks)\n",
     "\n",
     "epochs = len(history.history['val_accuracy'])\n",
-    "if epochs < EARLY_STOPPING:\n",
+    "if epochs < INITIAL_EPOCHS:\n",
     "    print(f\"Training stopped early with validation accuracy {round(history.history['val_accuracy'][-1], 3)} after {epochs} epochs.\")"
    ]
   },
@@ -505,13 +503,14 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.losses import CategoricalCrossentropy\n",
+    "from tensorflow.keras.layers import BatchNormalization\n",
     "from tensorflow.keras.optimizers import RMSprop\n",
     "\n",
     "\n",
-    "fine_tune_from = len(base_model.layers) // 5 * 4\n",
+    "fine_tune_from = len(base_model.layers) // 5\n",
     "base_model.trainable = True\n",
     "for index, layer in enumerate(base_model.layers):\n",
-    "    if index < fine_tune_from or type(layer).__name__ == 'BatchNormalization':\n",
+    "    if index < fine_tune_from or type(layer) == BatchNormalization:\n",
     "        layer.trainable = False\n",
     "\n",
     "further_learning_rate = 0.00001\n",
@@ -531,15 +530,16 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.python.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
     "\n",
     "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
+    "start_epoch = history.epoch[-1]\n",
     "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=history.epoch[-1], verbose=0, callbacks=callbacks)\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=start_epoch, verbose=0, callbacks=callbacks)\n",
     "\n",
     "epochs = len(history.history['val_accuracy'])\n",
-    "if epochs < EARLY_STOPPING:\n",
+    "if epochs < start_epoch + FINE_TUNING_EPOCHS:\n",
     "    print(f\"Training stopped early with validation accuracy {round(history.history['val_accuracy'][-1], 3)} after {epochs} epochs.\")"
    ]
   },
@@ -577,13 +577,16 @@
    },
    "outputs": [],
    "source": [
-    "from tensorflow.lite.python.lite import TFLiteConverter\n",
+    "from tensorflow import lite\n",
     "from os import makedirs\n",
     "\n",
     "\n",
+    "model_name = f\"detector-{round(history.history['accuracy'][-1], 5)}\"\n",
+    "\n",
     "makedirs(MODEL_DIR, exist_ok=True)\n",
-    "with open(f\"{MODEL_DIR}/detector-{history.history['accuracy'][-1]}.tflite\", 'wb') as file:\n",
-    "    lite_model = TFLiteConverter.from_keras_model(model).convert()\n",
+    "model.save(f\"{MODEL_DIR}/{model_name}.h5\")\n",
+    "with open(f\"{MODEL_DIR}/{model_name}.tflite\", 'wb') as file:\n",
+    "    lite_model = lite.TFLiteConverter.from_keras_model(model).convert()\n",
     "    file.write(lite_model)"
    ]
   }
