model after-published

--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Support function initialization:"
+    "#### Support functions and classes initialization:"
    ]
   },
   {
@@ -382,7 +382,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Image dataset creation, splitting in train and validation datasets\n",
+    "**NB!** in the first line `from tensorflow.python.keras.layers import RandomFlip, RandomRotation` causes [error](https://github.com/keras-team/keras/issues/15699) in model saving in current TensorFlow latest version (2.7) - it is an unexpected behavior, should be fixed in nearest future."
+   ]
   },
   {
    "cell_type": "code",
@@ -424,7 +427,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Model initialization and compilation"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,7 +471,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Training top layers of the model (its 'head')\n",
+    "Early stopping is used to prevent overfitting, usually it stops after 12-14 epochs."
+   ]
   },
   {
    "cell_type": "code",
@@ -489,6 +497,14 @@
     "epochs = len(history.history['val_accuracy'])\n",
     "if epochs < INITIAL_EPOCHS:\n",
     "    print(f\"Training stopped early with validation accuracy {round(history.history['val_accuracy'][-1], 3)} after {epochs} epochs.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model preparing for fine-tuning\n",
+    "Only top 80% of layers get fine-tuned not to mess up with base image detection weights."
    ]
   },
   {
@@ -520,6 +536,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training middle and top layers of the model (fine-tuning)\n",
+    "Early stopping is used to prevent overfitting, usually it stops after 1-2 epochs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -546,7 +570,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Saving model\n",
+    "Model is saved in both `.h5` and `.tflite` formats for mobile use."
+   ]
   },
   {
    "cell_type": "code",
@@ -581,7 +608,7 @@
     "from os import makedirs\n",
     "\n",
     "\n",
-    "model_name = f\"detector-{round(history.history['accuracy'][-1], 5)}\"\n",
+    "model_name = f\"hogweed_detector-{round(history.history['accuracy'][-1], 5)}\"\n",
     "\n",
     "makedirs(MODEL_DIR, exist_ok=True)\n",
     "model.save(f\"{MODEL_DIR}/{model_name}.h5\")\n",
