--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -154,15 +154,15 @@
     "        self.batch_train_loss = []\n",
     "        self.epoch_train_accuracy = []\n",
     "        self.epoch_train_loss = []\n",
-    "        self.epoch_test_accuracy = []\n",
-    "        self.epoch_test_loss = []\n",
+    "        self.epoch_validation_accuracy = []\n",
+    "        self.epoch_validation_loss = []\n",
     "\n",
-    "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_test_graph) = subplots(3, 1, figsize=(15, 15))\n",
+    "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_validation_graph) = subplots(3, 1, figsize=(15, 15))\n",
     "\n",
     "        self.figure.suptitle(\"Accuracy/Loss graphs\")\n",
     "        configure_graph(self.batch_train_graph, \"Batch\", \"training\", \"Accuracy and Loss\")\n",
     "        configure_graph(self.epoch_train_graph, \"Epoch\", \"training\", \"Accuracy and Loss\")\n",
-    "        configure_graph(self.epoch_test_graph, \"Epoch\", \"testing\", \"Accuracy and Loss\")\n",
+    "        configure_graph(self.epoch_validation_graph, \"Epoch\", \"validation\", \"Accuracy and Loss\")\n",
     "\n",
     "        self.figure_display_id = \"figure\"\n",
     "        close(self.figure)\n",
@@ -204,9 +204,9 @@
     "        self.epoch_train_loss.append(logs['loss'])\n",
     "        self.redraw_graph(self.epoch_train_graph, self.epoch_train_accuracy, self.epoch_train_loss)\n",
     "\n",
-    "        self.epoch_test_accuracy.append(logs['val_accuracy'])\n",
-    "        self.epoch_test_loss.append(logs['val_loss'])\n",
-    "        self.redraw_graph(self.epoch_test_graph, self.epoch_test_accuracy, self.epoch_test_loss)\n",
+    "        self.epoch_validation_accuracy.append(logs['val_accuracy'])\n",
+    "        self.epoch_validation_loss.append(logs['val_loss'])\n",
+    "        self.redraw_graph(self.epoch_validation_graph, self.epoch_validation_accuracy, self.epoch_validation_loss)\n",
     "\n",
     "        self.batches_bar.set_description(f\"Loss: {round(logs['loss'], 3)}; Accuracy: {round(logs['accuracy'] * 100, 3)}\")\n",
     "        self.batches_bar.close()\n",
@@ -348,11 +348,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use this cell to regenerate `./datasets/validation.csv` file\n",
-    "It will contain 50 last open source from each plant dataset (cetera, hogweed) that were not in train nor in test datasets + 50 open source images from [unsplash](https://unsplash.com/).\n",
+    "### Use this cell to regenerate `./datasets/test.csv` file\n",
+    "It will contain 50 last open source from each plant dataset (cetera, hogweed) that were not in train nor in validation datasets + 50 open source images from [unsplash](https://unsplash.com/).\n",
     "It is not guaranteed that unsplash images will be unique, but it's the only clearly open source image source was found.\n",
     "\n",
-    "The generated file may be used with result testing script (`./test.py`) as follows: `python test.py -n ./models/[YOUR MODEL FILE NAME].tflite -s ./datasets/validation.csv`."
+    "The generated file may be used with result testing script (`./test.py`) as follows: `python test.py -n ./models/[YOUR MODEL FILE NAME].tflite -s ./datasets/test.csv`."
    ]
   },
   {
@@ -376,7 +376,7 @@
     "\n",
     "URLs = naturalize_urls(hogweed_frame.to_list()) + naturalize_urls(cetera_frame.to_list()) + [f\"https://source.unsplash.com/random?sig={num}\" for num in range(50)]\n",
     "classes = sum([[cls] * 50 for cls in CLASS_NAMES], [])\n",
-    "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/validation.csv\", index=False)"
+    "DataFrame(list(zip(classes, URLs)), columns=['class', 'url']).to_csv(path_or_buf=\"./datasets/test.csv\", index=False)"
    ]
   },
   {
@@ -414,14 +414,14 @@
     "\n",
     "train_power = batches_num * 9 // 10\n",
     "train_dataset = dataset.take(train_power).prefetch(buffer_size=AUTOTUNE)\n",
-    "test_dataset = dataset.skip(train_power).take(train_power // 9).prefetch(buffer_size=AUTOTUNE)\n",
+    "validation_dataset = dataset.skip(train_power).take(train_power // 9).prefetch(buffer_size=AUTOTUNE)\n",
     "\n",
     "data_augmentation = Sequential([\n",
     "    RandomFlip('horizontal'),\n",
     "    RandomRotation(0.1)\n",
     "])\n",
     "\n",
-    "print(f\"Train set has {train_dataset.cardinality()} batches, test set has {test_dataset.cardinality()} batches; train set will be augmented.\")"
+    "print(f\"Train set has {train_dataset.cardinality()} batches, validation set has {validation_dataset.cardinality()} batches; train set will be augmented.\")"
    ]
   },
   {
@@ -492,7 +492,7 @@
     "\n",
     "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
     "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=test_dataset, verbose=0, callbacks=callbacks)\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS, validation_data=validation_dataset, verbose=0, callbacks=callbacks)\n",
     "\n",
     "epochs = len(history.history['val_accuracy'])\n",
     "if epochs < INITIAL_EPOCHS:\n",
@@ -560,7 +560,7 @@
     "print(f\"Training model with {len(model.trainable_variables)} variables enabled.\")\n",
     "start_epoch = history.epoch[-1]\n",
     "callbacks = [LoggingCallback(), EarlyStopping(patience=1, restore_best_weights=True, monitor='val_accuracy', min_delta=EARLY_STOPPING)]\n",
-    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=test_dataset, initial_epoch=start_epoch, verbose=0, callbacks=callbacks)\n",
+    "history = model.fit(train_dataset, epochs=INITIAL_EPOCHS + FINE_TUNING_EPOCHS, validation_data=validation_dataset, initial_epoch=start_epoch, verbose=0, callbacks=callbacks)\n",
     "\n",
     "epochs = len(history.history['val_accuracy'])\n",
     "if epochs < start_epoch + FINE_TUNING_EPOCHS:\n",
