--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -18,9 +18,9 @@
    },
    "outputs": [],
    "source": [
-    "!pip install --user pipenv\n",
-    "!mkdir venv && python -m pipenv install --skip-lock venv\n",
-    "!python -m pipenv shell\n",
+    "!pip3 install --user pipenv\n",
+    "!python3 -m pipenv install --skip-lock\n",
+    "!python3 -m pipenv shell\n",
     "!nbstripout --install"
    ]
   },
