added falsely removed printing images line

--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -405,6 +405,7 @@
    "source": [
     "from tensorflow.python.keras.layers import RandomFlip, RandomRotation\n",
     "from tensorflow.keras.utils import image_dataset_from_directory\n",
+    "from tensorflow.keras.backend import expand_dims\n",
     "from tensorflow.python.data import AUTOTUNE\n",
     "from tensorflow.keras import Sequential\n",
     "\n",
@@ -421,7 +422,13 @@
     "    RandomRotation(0.1)\n",
     "])\n",
     "\n",
-    "print(f\"Train set has {train_dataset.cardinality()} batches, validation set has {validation_dataset.cardinality()} batches; train set will be augmented.\")"
+    "print(f\"Train set has {train_dataset.cardinality()} batches, validation set has {validation_dataset.cardinality()} batches; train set will be augmented:\")\n",
+    "for i in range(0, 5):\n",
+    "    imgs = []\n",
+    "    for img, _ in train_dataset.skip(i).take(1):\n",
+    "        for j in range(0, 5):\n",
+    "            imgs += [data_augmentation(expand_dims(img[0], 0))[0] / 255]\n",
+    "    print_images_line(imgs)"
    ]
   },
   {
