github model added to version control

--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Hogweed detector creation\n",
+    "Follow this file to create a hogweed detecting `.tflite` model, classifying images with accuracy > 90%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Dependencies installing and environment initialization:\n",
     "Run following code in console, not in jupyter server; then launch server using fresh-created virtual environment."
    ]
@@ -579,7 +587,8 @@
    "metadata": {},
    "source": [
     "### Saving model\n",
-    "Model is saved in both `.h5` and `.tflite` formats for mobile use."
+    "Model is saved in both `.h5` and `.tflite` formats for mobile use.\n",
+    "**NB!** CD/CI pipelines accept file named `hogweed-detector.tflite` only. So, the best production ready detector should be renamed."
    ]
   },
   {
