added display id for graphs

--- a/ml-helper/hogweed-detector.ipynb
+++ b/ml-helper/hogweed-detector.ipynb
@@ -139,8 +139,8 @@
    "outputs": [],
    "source": [
     "from matplotlib.pyplot import imread, subplots, close\n",
-    "from IPython.display import display, update_display\n",
     "from tensorflow.keras.callbacks import Callback\n",
+    "from IPython.display import display\n",
     "from matplotlib.axes import Axes\n",
     "from tqdm.notebook import tqdm\n",
     "from random import sample\n",
@@ -166,15 +166,13 @@
     "        self.epoch_validation_loss = []\n",
     "\n",
     "        self.figure, (self.batch_train_graph, self.epoch_train_graph, self.epoch_validation_graph) = subplots(3, 1, figsize=(15, 15))\n",
-    "\n",
     "        self.figure.suptitle(\"Accuracy/Loss graphs\")\n",
     "        configure_graph(self.batch_train_graph, \"Batch\", \"training\", \"Accuracy and Loss\")\n",
     "        configure_graph(self.epoch_train_graph, \"Epoch\", \"training\", \"Accuracy and Loss\")\n",
     "        configure_graph(self.epoch_validation_graph, \"Epoch\", \"validation\", \"Accuracy and Loss\")\n",
-    "\n",
-    "        self.figure_display_id = \"figure\"\n",
     "        close(self.figure)\n",
     "\n",
+    "        self.display_object = None\n",
     "        self.epochs_bar = None\n",
     "        self.batches_bar = None\n",
     "\n",
@@ -197,10 +195,10 @@
     "        graph.grid(visible=True)\n",
     "\n",
     "        self.figure.canvas.draw()\n",
-    "        update_display(self.figure, display_id=self.figure_display_id)\n",
+    "        self.display_object.update()\n",
     "\n",
     "    def on_train_begin(self, logs=None):\n",
-    "        display(self.figure, display_id=self.figure_display_id)\n",
+    "        self.display_object = display(self.figure, display_id=True)\n",
     "\n",
     "        self.epochs_bar = tqdm(desc=\"Training\", unit=\"epoch\", total=INITIAL_EPOCHS)\n",
     "\n",
